--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 }
 
 :root{
-
+    --bg-clr-: #09090a;
 }
 
 body{
-    background-color: #09090a;
+    background-color: var(--bg-clr-);
     color: white;
 
     height: 100vh;
@@ -25,7 +25,7 @@ header {
 
     position: fixed;
     width: 100%;
-    background-color: #09090a;
+    background-color: var(--bg-clr-);
 }
 
 button {
